resolved rotating image alignment issue on safari

--- a/src/content/dam/wbx/us/images/workspace/styles/_rotatingbg.scss
+++ b/src/content/dam/wbx/us/images/workspace/styles/_rotatingbg.scss
@@ -44,7 +44,7 @@ $animationDuration: $workspaceCount * $individualAnimationDuration;
         }
 
         img {
-          position: relative;
+          position: absolute;
           height: 100%;
           width: 100%;
           max-width: 100%;
